@@ -1,7 +1,8 @@
-$Id: server-version-info,v 1.9 2000/06/22 05:40:52 lusky Exp $
+$Id: server-version-info,v 1.2 2000/10/06 03:00:54 lusky Exp $
+Updated for Hybrid 6 (2000/11/26)
 
 When you type /version you will often see something like this:
-*** Server cs-pub.bu.edu: 2.8.21. AHiKmMptXY
+*** 2.8/hybrid-6rc6(20001110_1). irc.ins.net.uk ACHiIMpY TS3ow
 
 Ever wondered what those funny chars mean after the version number? Well
 here they are:
@@ -13,32 +14,22 @@ here they are:
 'D'	DEBUGMODE
 'e'	LOCOP_REHASH
 'E'	OPER_REHASH
-'f'	FOLLOW_IDENT_RFC
-'F'	HIDE_FAKES
-'g'	SUN_GSO_BUG
 'G'	GLINES
 'H'	HUB
 'i'	SHOW_INVISIBLE_LUSERS
 'I'	NO_DEFAULT_INVISIBLE
 'K'	OPER_KILL
-'k'	LOCAL_KILL_ONLY
-'L'	LEAST_IDLE
-'m'	M4_PREPROC
 'M'	IDLE_FROM_MSG
-'N'	DELAY_NICKS
 'p'	CRYPT_OPER_PASSWORD
 'P'	CRYPT_LINK_PASSWORD
-'N'	NPATH
 'r'	LOCOP_RESTART
 'R'	OPER_RESTART
-'s'	SECUNREG
-'S'	ENABLE_SUMMON
 't'	OPER_REMOTE
-'T'	TRACE_STATS
-'u'	IRCII_KLUDGE
-'U'	ENABLE_USERS
 'V'	VALLOC
-'w'	NOWRITEALARM
-'X'	UNIXPORT
 'Y'	USE_SYSLOG
-'8'	V28PlusOnly
+'Z'	ZIP_LINKS
+
+'TS'    Supports TS
+'3'     TS Version 3
+'o'     TS Only
+'w'     TS Warnings
