@@ -1,3 +1,7 @@
+*** 20001201_1 by lusky
+added Gline Exemption flag ('_') to Ilines
+
+
 *** 20001126_1 by lusky
 hide baninfo for hide_ops (db)
 misc documentation cleanups (wc)
